fix(SOURCE): Fix horizontal scrolling related issues

--- a/source/styles/components/jumbotron/base.scss
+++ b/source/styles/components/jumbotron/base.scss
@@ -10,6 +10,7 @@
     .leftButton,
     .rightButton {
         position: absolute;
+        z-index: 1;
         top: 50%;
         width: 27px;
         height: 37px;
@@ -41,13 +42,14 @@
 
         .jumbotronWrap {
             @include flex-center;
-            position: relative;
-            top: -28px;
-            left: -2px;
             flex-direction: column;
             width: 714px;
             height: auto;
             margin: auto;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -63%);   
     
             .textWrap {
                 color: white;
@@ -77,11 +79,11 @@
                     display: flex;
                     position: relative;
                     top: 5px;
-                    left: -9px;
+                    left: -11px;
                     width: 120%;
                     font-size: 20px;
                     line-height: 24px;
-                    word-spacing: -1.5pt;
+                    letter-spacing: -0.18pt;
 
                 }
             }
@@ -90,10 +92,10 @@
         .readMoreWrap {
             @include flex-center;
             position: relative;
-            top: 17px;
+            top: 46px;
             width: 144px;
             height: 44px;
-            left: 14px;
+            left: 16px;
             margin: auto;
             background: $green;
 
