--- a/source/styles/components/jumbotron/mobile.scss
+++ b/source/styles/components/jumbotron/mobile.scss
@@ -11,9 +11,9 @@
         top: -18px;
 
         .jumbotronWrap {
-            top: 0px;
+            // top: 0px;
             margin: auto;
-            left: 0px;
+            // left: 0px;
             width: unset;
 
             .textWrap {
