--- a/source/styles/components/jumbotron/tablet.scss
+++ b/source/styles/components/jumbotron/tablet.scss
@@ -9,8 +9,8 @@
     .contentWrap {
 
         .jumbotronWrap {
-            top: -33px;
-            left: -25px;
+            // top: -33px;
+            // left: -25px;
 
             .textWrap {
                 h2 {
